syntax = "proto3";

package sensordata;

message GetRequest {
  string name = 1;
  int32 age = 2;
  repeated string features = 3;
}

message GetResponse {
  enum Status {
    OK = 0;
    ERR = 1;
    NOT_FOUND = 2;
  }
  Status status = 1;
  string address = 2;
  string city = 3;
  int32 zipcode = 4;
}

message SensorValue {
  string value_name = 1;
  float value_data = 2;
  string value_unit = 3;
}

message SensorData {
  string sensor_name = 1;
  string sensor_type = 2;
  string sensor_location = 3;
  repeated SensorValue sensor_values = 4;
}

message SensorDataResponse {
  enum Status {
    OK = 0;
    ERR = 1;
    NOT_FOUND = 2;
  }
  Status status = 1;
  repeated SensorData sensors_data = 2;
}
